# VeloxMesh

./: .dockerignore  .env.example  .env.postgres.example  .gitignore  AGENTS.md  Makefile  README.md  RELEASE_NOTES.md  config.cache.example.json  config.heuristic.example.json  config.json.example  config.scheduler.example.json  docker-compose.postgres.yml  docker-compose.yml  go.mod  go.sum  test_qdrant.go
.planning/: 10-UAT.md  26-UAT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v7.1-MILESTONE-AUDIT.md  v7.2-MILESTONE-AUDIT.md  v7.5-MILESTONE-AUDIT.md
.planning/debug/: scheduler-score-breaker.md  scheduler-scorer-breakers.md
.planning/milestones/: v4-REQUIREMENTS.md  (+22 more)
dashboard/: .env.example  .gitignore  README.md  admin-console-bff-development.md  docker-compose.smtp.example.yml  docker-compose.yml  go.mod  go.sum  local-dev-setup-checklist.md
deploy/: README.md  install.sh  uninstall.sh
docker/: onnx-worker.Dockerfile  onnx-worker.remote-build.Dockerfile  remote-build.Dockerfile
docs/: llm-latency-optimization.md  scheduler-1.0-runbook.md  tmp.md
tests/: phase5_verify_script.py
tools/scheduler_training/: README.md  pyproject.toml
tools/scheduler_training/scheduler_training/: __init__.py  artifacts.py  cli.py  evaluate.py  export.py  onnx_worker.py  publish.py  train.py
tools/scheduler_training/scheduler_training/predictorv1/: __init__.py  predictor_pb2.py  predictor_pb2_grpc.py
tools/scheduler_training/tests/: test_artifacts.py  test_export_schema.py  test_onnx_worker.py  test_train_publish.py
(+739 files in other folders)
