[project]
name = "scheduler-training"
version = "0.1.0"
description = "Offline scheduler training tooling for VeloxMesh"
requires-python = ">=3.11"
dependencies = ["grpcio>=1.81.1", "onnx>=1.16", "onnxruntime>=1.23"]

[project.scripts]
scheduler-training = "scheduler_training.cli:main"

[dependency-groups]
dev = ["grpcio-tools>=1.81.1", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
